--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ android:
 
     # The SDK version used to compile your project
     - android-23
+    - android-22
 
     # Additional components
     - extra-google-m2repository
