--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ android:
 
     # The BuildTools version used by your project
     - build-tools-23.0.3
+    - build-tools-22.0.1
 
     # The SDK version used to compile your project
     - android-23
