fix error compiling travis in ':app:packageDebugAndroidTest:
Execution failed for task ':app:packageDebugAndroidTest'.
> Duplicate files copied in APK LICENSE.txt
fix with: 	  packagingOptions.exclude 'LICENSE.txt'

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,9 @@ android {
     lintOptions {
         abortOnError false
     }
+    packagingOptions {
+        exclude 'LICENSE.txt'
+    }
     applicationVariants.all { variant ->
         variant.outputs.each { output ->
             def alignedOutputFile = output.outputFile
