--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 language: android
+jdk: oraclejdk8
 android:
   components:
     # Uncomment the lines below if you want to
     # use the latest revision of Android SDK Tools
     - tools
-    - platform-tools
     - tools
+    - platform-tools
 
     # The BuildTools version used by your project
     - build-tools-25.0.2
