More work on base browser and build process:
- Add lint check and fail builds on lint errors and warnings.
- Fix all the lint errors and warnings.
- Style a little the Appbar, set proper url or DDG query when browsing.
- Disable the refresh button on startup when there's nothing to refresh
- Set configChanges in the main activity to prevent the WebView to reload on every rotation change (we'll see if there's a better way to preserve the state without using this)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    lintOptions {
+        abortOnError true
+        warningsAsErrors true
+    }
 }
 
 ext.supportLibraryVersion = '25.3.1'
@@ -28,6 +32,7 @@ dependencies {
     })
 
     compile "com.android.support:appcompat-v7:$supportLibraryVersion"
+    compile "com.android.support:design:$supportLibraryVersion"
 
     compile 'com.jakewharton:butterknife:8.5.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
