Architecture and tests work:
- Removed base interfaces for view and presenter, move to a light MVP implementation. Inject the presenter from a temp static Map.
- Add some basic test for the browser presenter.
- Add a progress bar when a page is loading.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 
     testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:2.2.0'
 }
