Clean some code, Finish implementing tabs.
- Add id field to tab and use a Map to hold the WebView references in the BrowserFragment, to avoid any conflict with the position change (when adding or removing tabs)
- Make Tab constructor private and add a static creator function
- Add WebViewUtils to help pause/resume/destroy WebViews
- Improve TabSwitcherActivity results and all the extra action that the activity provides (delete all, delete each tab, create new tabs and select tabs)
- Remove unused params in the TabSwitcherAdapter interface
- Add ignore lint error for "MergeRootFrame" in browser.xml layout, since the layout is the container for the WebViews and included in the fragment_browser layout in an outer LinearlLayout. no merge happening in here
- Add ignore lint error for "Overdraw" in viewholder_tab.xml layout, since the background is "?attr/selectableItemBackground" and just draws a ripple when the RecyclerView item is selected, no overdraw happening in here
- Add missing contentDescription tag in ImageButton in TabSwitcherActivity layout
- Remove unused code and comments.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,7 @@
                 <category android:name="android.intent.category.BROWSABLE" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.tabswitcher.TabSwitcherActivity"></activity>
+        <activity android:name=".ui.tabswitcher.TabSwitcherActivity" />
     </application>
 
 </manifest>
