More work on tabs:
- Edit BrowserPresenter tests to handle the TabView
- Make the activity singleInstance, so we don't have only one instance when launching the app from ACTION_ASSIST / ACTION_VIEW / ACTION_WEB_SEARCH
- inject the TabManager into the BrowserPresenter
Slightly edit the TabSwitcherActivity UI, to use a Toolbar and put the "new tab" button on the bottom with the other buttons, remove the openSettings action from the presenter.
- Add getter/setters for the TabManager fields.
- Remove the removeAllTabs from the BrowserView and let the tab manager remove all the tabs and inform the view after the callback.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         <activity
             android:name=".ui.MainActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
-            android:launchMode="singleTop">
+            android:launchMode="singleInstance">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
