--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,15 +11,38 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+    signingConfigs {
+        release
+    }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
     lintOptions {
         abortOnError true
         warningsAsErrors true
+    }
+    def Properties props = new Properties()
+    def propFile = new File('/Users/jenkins/jenkins_static/duckduckgo_android/ddg_android_build.properties')
+    if (propFile.exists()){
+        props.load(new FileInputStream(propFile))
+
+        if (props!=null && props.containsKey('key.store') && props.containsKey('key.store.password') &&
+                props.containsKey('key.alias') && props.containsKey('key.alias.password')) {
+            android.signingConfigs.release.storeFile = file(props['key.store'])
+            android.signingConfigs.release.storePassword = props['key.store.password']
+            android.signingConfigs.release.keyAlias = props['key.alias']
+            android.signingConfigs.release.keyPassword = props['key.alias.password']
+        } else {
+            println 'signing.properties found but some entries are missing'
+            android.buildTypes.release.signingConfig = null
+        }
+    } else {
+        println 'signing.properties not found'
+        android.buildTypes.release.signingConfig = null
     }
 }
 
