Finish implement the dark UI theme from Zeplin:
- Add missing fonts, and tweak TabSwitcher and TabViewHolder layouts accordingly.
- Bump support library to 25.4.0, and suppress OldTargetApi inspection temporary since the support library are still in beta. We'll update the SDK and library to 26 when they are in production.
- Add new google maven url in build.gradle.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,7 @@ android {
     defaultConfig {
         applicationId "com.duckduckgo.app"
         minSdkVersion 16
+        //noinspection OldTargetApi
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -23,7 +24,7 @@ android {
     }
 }
 
-ext.supportLibraryVersion = '25.3.1'
+ext.supportLibraryVersion = '25.4.0'
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
