--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ ext {
 
 android {
     compileSdkVersion 26
+    buildToolsVersion "26.0.2"
     defaultConfig {
         applicationId "com.duckduckgo.app"
         minSdkVersion 21
