--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:tools="http://schemas.android.com/tools"
-          package="com.duckduckgo.app.main"
+          package="com.duckduckgo.app.browser"
           xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="false"
@@ -12,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name="com.duckduckgo.app.main.MainActivity">
+        <activity android:name="com.duckduckgo.app.browser.BrowserActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
