Add url converter interface for easier testing; move converter's package

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,15 @@ android {
     testOptions {
         unitTests.returnDefaultValues = true
     }
+    sourceSets {
+        String sharedTestDir = 'src/sharedTest/java'
+        test {
+            java.srcDir sharedTestDir
+        }
+        androidTest {
+            java.srcDir sharedTestDir
+        }
+    }
 }
 
 ext {
@@ -60,4 +69,6 @@ dependencies {
 
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    androidTestImplementation 'org.mockito:mockito-android:2.12.0'
+    androidTestImplementation "android.arch.core:core-testing:$architectureComponents"
 }
