--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,10 @@ android:
     - build-tools-26.0.2
 
     # The SDK version used to compile your project
-    - android-26
+    - android-27
+
+    # Specify at least once system image
+    sys-img-armeabi-v7a-android-22
 
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
