Adding emulator wait command to build script

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,4 +26,10 @@ cache:
     - $HOME/.gradle/wrapper/
     - $HOME/.android/build-cache
 
+before_script:
+- echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
+- emulator -avd test -no-skin -no-audio -no-window &
+- android-wait-for-emulator
+- adb shell input keyevent 82 &
+
 script: ./gradlew build connectedCheck
