--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,9 @@ android:
     - android-27
 
 before_install:
+  - mkdir "$ANDROID_HOME/licenses" || true
+  - echo "8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
+  - echo "d56f5187479451eabf01fb78af6dfcb131a6481e" > "$ANDROID_HOME/licenses/android-sdk-license"
   - sdkmanager tools
   - yes | sdkmanager --licenses
   - sdkmanager "system-images;android-22;default;armeabi-v7a"
