--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ android:
     # The SDK version used to compile your project
     - android-27
 
+    # NDK support
+    - ndk-bundle
+
 before_install:
   - mkdir "$ANDROID_HOME/licenses" || true
   - echo "8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
@@ -21,10 +24,6 @@ before_install:
   - sdkmanager tools
   - yes | sdkmanager --licenses
   - sdkmanager "system-images;android-22;default;armeabi-v7a"
-  # Get ndk
-  - git clone https://github.com/urho3d/android-ndk.git $HOME/android-ndk-root
-  - export ANDROID_NDK_HOME=$HOME/android-ndk-root
-  - echo "ndk.dir=$ANDROID_NDK_HOME" > local.properties
   # Create and start emulator for the script. Meant to race the install task.
   - echo no | avdmanager create avd --force -n test -k "system-images;android-22;default;armeabi-v7a"
   - $ANDROID_HOME/emulator/emulator -avd test -no-audio -no-window &
