More travis faffing

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,6 @@ android:
     # The SDK version used to compile your project
     - android-27
 
-    # NDK support
-    - ndk-bundle
 
 before_install:
   - mkdir "$ANDROID_HOME/licenses" || true
@@ -23,7 +21,7 @@ before_install:
   - echo "d56f5187479451eabf01fb78af6dfcb131a6481e" > "$ANDROID_HOME/licenses/android-sdk-license"
   - sdkmanager tools
   - yes | sdkmanager --licenses
-  - sdkmanager "system-images;android-22;default;armeabi-v7a"
+  - sdkmanager "system-images;android-22;default;armeabi-v7a;ndk-bundle"
   # Create and start emulator for the script. Meant to race the install task.
   - echo no | avdmanager create avd --force -n test -k "system-images;android-22;default;armeabi-v7a"
   - $ANDROID_HOME/emulator/emulator -avd test -no-audio -no-window &
