--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,8 @@ before_install:
   - echo "d56f5187479451eabf01fb78af6dfcb131a6481e" > "$ANDROID_HOME/licenses/android-sdk-license"
   - sdkmanager tools
   - yes | sdkmanager --licenses
-  - sdkmanager "system-images;android-22;default;armeabi-v7a;ndk-bundle"
+  - sdkmanager "ndk-bundle"
+  - sdkmanager "system-images;android-22;default;armeabi-v7a"
   # Create and start emulator for the script. Meant to race the install task.
   - echo no | avdmanager create avd --force -n test -k "system-images;android-22;default;armeabi-v7a"
   - $ANDROID_HOME/emulator/emulator -avd test -no-audio -no-window &
