--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ before_install:
   - yes | sdkmanager --licenses
   - echo "Fetching ndk-bundle. Suppressing output to avoid travis 4MG size limit"
   - sdkmanager "ndk-bundle" >/dev/null
-  - echo "Fetching ndk-bnundle complete"
+  - echo "Fetching ndk-bundle complete"
   - sdkmanager "system-images;android-22;default;armeabi-v7a"
   # Create and start emulator for the script. Meant to race the install task.
   - echo no | avdmanager create avd --force -n test -k "system-images;android-22;default;armeabi-v7a"
