--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,6 @@ android:
     # Uncomment the lines below if you want to
     # use the latest revision of Android SDK Tools
     - tools
-    - tools
     - platform-tools
 
     # The BuildTools version used by your project
@@ -14,12 +13,16 @@ android:
     # The SDK version used to compile your project
     - android-27
 
+
 before_install:
   - mkdir "$ANDROID_HOME/licenses" || true
   - echo "8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
   - echo "d56f5187479451eabf01fb78af6dfcb131a6481e" > "$ANDROID_HOME/licenses/android-sdk-license"
   - sdkmanager tools
   - yes | sdkmanager --licenses
+  - echo "Fetching ndk-bundle. Suppressing output to avoid travis 4MG size limit"
+  - sdkmanager "ndk-bundle" >/dev/null
+  - echo "Fetching ndk-bundle complete"
   - sdkmanager "system-images;android-22;default;armeabi-v7a"
   # Create and start emulator for the script. Meant to race the install task.
   - echo no | avdmanager create avd --force -n test -k "system-images;android-22;default;armeabi-v7a"
