--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    externalNativeBuild {
+
+        cmake {
+            path "CMakeLists.txt"
+        }
+    }
     lintOptions {
         abortOnError false
     }
@@ -33,21 +39,25 @@ android {
         unitTests.returnDefaultValues = true
     }
     sourceSets {
-        String sharedTestDir = 'src/sharedTest/java'
+        String sharedTestJavaDir = 'src/sharedTest/java'
+        String sharedTestResourcesDir = 'src/sharedTest/resources'
         test {
-            java.srcDir sharedTestDir
+            java.srcDir sharedTestJavaDir
+            resources.srcDir sharedTestResourcesDir
         }
         androidTest {
-            java.srcDir sharedTestDir
+            java.srcDir sharedTestJavaDir
+            resources.srcDir sharedTestResourcesDir
         }
     }
 }
 
 ext {
-    supportLibrary = "26.1.0"
+    supportLibrary = "27.0.1"
     architectureComponents = "1.0.0"
     dagger = "2.13"
 }
+
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -56,7 +66,9 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.squareup.okhttp3:okhttp:3.9.0'
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     implementation "io.reactivex.rxjava2:rxjava:2.1.6"
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'com.jakewharton.timber:timber:4.6.0'
     implementation "android.arch.lifecycle:extensions:$architectureComponents"
     implementation "android.arch.lifecycle:reactivestreams:$architectureComponents"
@@ -67,11 +79,13 @@ dependencies {
     kapt "com.google.dagger:dagger-compiler:$dagger"
 
     testImplementation 'org.mockito:mockito-core:2.12.0'
+    testImplementation "com.nhaarman:mockito-kotlin-kt1.1:1.5.0"
     testImplementation 'junit:junit:4.12'
     testImplementation "android.arch.core:core-testing:$architectureComponents"
 
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     androidTestImplementation 'org.mockito:mockito-android:2.12.0'
+    androidTestImplementation "com.nhaarman:mockito-kotlin-kt1.1:1.5.0"
     androidTestImplementation "android.arch.core:core-testing:$architectureComponents"
 }
