--- a/.travis.yml
+++ b/.travis.yml
@@ -15,15 +15,7 @@ android:
 
 
 before_install:
-  - mkdir "$ANDROID_HOME/licenses" || true
-  - echo "8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
-  - echo "d56f5187479451eabf01fb78af6dfcb131a6481e" > "$ANDROID_HOME/licenses/android-sdk-license"
-  - sdkmanager tools
-  - yes | sdkmanager --licenses
-  - echo "Fetching ndk-bundle. Suppressing output to avoid travis 4MG size limit"
-  - sdkmanager "ndk-bundle" >/dev/null
-  - echo "Fetching ndk-bundle complete"
-  - sdkmanager "system-images;android-22;default;armeabi-v7a"
+  - ./install_tools.sh
   # Create and start emulator for the script. Meant to race the install task.
   - echo no | avdmanager create avd --force -n test -k "system-images;android-22;default;armeabi-v7a"
   - $ANDROID_HOME/emulator/emulator -avd test -no-audio -no-window &
