ACRA only be available to release builds; otherwise breaks instant run
As per docs (https://github.com/ACRA/acra/wiki/AdvancedUsage#instant-run) it is advised to only add ACRA in for release builds

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,7 +75,7 @@ dependencies {
     implementation "android.arch.lifecycle:reactivestreams:$architectureComponents"
     implementation "com.google.dagger:dagger-android:$dagger"
     implementation "com.google.dagger:dagger-android-support:$dagger"
-    implementation 'com.faendir:acra:4.10.0'
+    releaseImplementation 'com.faendir:acra:4.10.0'
 
     kapt "com.google.dagger:dagger-android-processor:$dagger"
     kapt "com.google.dagger:dagger-compiler:$dagger"
