--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,11 +18,13 @@
             android:name=".BrowserActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:screenOrientation="fullSensor"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="stateAlwaysVisible">
         </activity>
         <activity
             android:name="com.duckduckgo.app.home.HomeActivity"
             android:label="@string/title_activity_home"
+            android:parentActivityName="com.duckduckgo.app.home.HomeActivity"
             android:screenOrientation="fullSensor"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -30,13 +32,6 @@
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
-        </activity>
-        <activity
-            android:name="com.duckduckgo.app.home.HomeSearchActivity"
-            android:parentActivityName="com.duckduckgo.app.home.HomeActivity"
-            android:windowSoftInputMode="stateAlwaysVisible"
-            android:label="@string/title_activity_home_search"
-            android:theme="@style/AppTheme.NoActionBar">
         </activity>
     </application>
 
