--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'kotlin-kapt'
 apply from: '../versioning.gradle'
 
 ext {
-    VERSION_NAME = "0.1.0"
+    VERSION_NAME = "0.2.0"
 }
 
 android {
@@ -19,11 +19,16 @@ android {
         versionCode buildVersionCode()
         versionName VERSION_NAME
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        archivesBaseName = "duckduckgo-$versionName"
+    }
+    signingConfigs {
+        release
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
     externalNativeBuild {
@@ -49,6 +54,22 @@ android {
             java.srcDir sharedTestJavaDir
             resources.srcDir sharedTestResourcesDir
         }
+    }
+
+    def staticConfigPath = "${System.getenv('HOME')}/jenkins_static/com.duckduckgo.mobile.android"
+    def propertiesPath = "${staticConfigPath}/ddg_android_build.properties"
+    def propertiesFile = new File(propertiesPath)
+    if (propertiesFile.exists()) {
+        println "Signing properties found"
+        def props = new Properties()
+        props.load(new FileInputStream(propertiesFile))
+        android.signingConfigs.release.storeFile = file("${staticConfigPath}/${props['key.store']}")
+        android.signingConfigs.release.storePassword = props['key.store.password']
+        android.signingConfigs.release.keyAlias = props['key.alias']
+        android.signingConfigs.release.keyPassword = props['key.alias.password']
+    } else {
+        println "Signing properties not found at ${propertiesPath}, releases will NOT succeed"
+        android.buildTypes.release.signingConfig = null
     }
 }
 
