Feature/add home screen (#57)
* Add home screen and home-search screen

Added shared element transition for the url textview/edit text. doesn't yet actually tie into searching.

* Replace HomeSearchActivity with BrowserActivity

* Preserve search query as the url input until the first result loaded

* Refactor method out for better clarity on code purpose

* Remove placeholder FAB and commented out code

* Further tidy up

* Rename `activity starter` method to simply `intent()`

* Remove misplaced action bar configuration

* Make ViewModel own the decision of what to show in the URL bar

* Move useful EditText extensions to their own file

* Navigate back to landing page if user clicks outside of toolbar

* Only show clear button when there is input to clear

* Updating to latest stable gradle plugin

* Clear button only shown when it should; no padding when it's gone

* Add documentation to new extension method

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,16 @@
         tools:ignore="GoogleAppIndexingWarning">
         <activity
             android:name=".BrowserActivity"
-            android:screenOrientation="fullSensor"
             android:configChanges="keyboardHidden|orientation|screenSize"
+            android:screenOrientation="fullSensor"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="stateAlwaysVisible">
+        </activity>
+        <activity
+            android:name="com.duckduckgo.app.home.HomeActivity"
+            android:label="@string/title_activity_home"
+            android:parentActivityName="com.duckduckgo.app.home.HomeActivity"
+            android:screenOrientation="fullSensor"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
