Disconnect List Blocking and Tracker Network Summary
• Downloads the disconnect list from the server
• Adds disconnect list tracker blocking
• Adds a skeleton privacy grade page
• Displays tracker network count (currently static, live updates will be added in future tasks)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.duckduckgo.app.browser"
-          xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.duckduckgo.app.browser">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name="com.duckduckgo.app.global.DuckDuckGoApplication"
@@ -28,11 +28,20 @@
             android:screenOrientation="fullSensor"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.duckduckgo.app.privacydashboard.PrivacyDashboardActivity"
+            android:label="@string/privacyDashboardActivityTitle"
+            android:parentActivityName=".BrowserActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name="org.acra.dialog.CrashReportDialog"
+            android:theme="@style/CrashReportingDialogStyle"
+            tools:replace="android:theme" />
 
     </application>
 
