--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,7 @@
             android:name=".BrowserActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:screenOrientation="fullSensor"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="stateAlwaysVisible">
+            android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
             android:name="com.duckduckgo.app.home.HomeActivity"
@@ -38,11 +37,6 @@
             android:label="@string/privacyDashboardActivityTitle"
             android:parentActivityName=".BrowserActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name="org.acra.dialog.CrashReportDialog"
-            android:theme="@style/CrashReportingDialogStyle"
-            tools:replace="android:theme" />
-
     </application>
 
 </manifest>
